Thu Dec 19 12:54:45 1996  Samuel Tardieu  <sam@inf.enst.fr>

	* s-parint.ads: Added dummy functions for Shared_Passive (needed
	  for the stub expansion).

	* s-parint.adb: Idem.

	* s-gartcp.adb: Removed a conversion between Interfaces.C.int and
	  pointer types because of a possible clash on 64 bits machines.

Mon Dec 16 15:26:02 1996  Samuel Tardieu  <sam@inf.enst.fr>

	* s-partyp.ads: Removed.

	* rci_info.ads: Removed (included in s-parint.ads).
	
	* rci_info.adb: Removed (included in s-parint.adb).

	* s-parint.ads: Inclusion of RCI_Info generic package.

	* s-parint.adb: Ditto.

	* Makefile.am: Removed rci_info.ad[bs] from file list.

Sat Nov 30 21:01:19 1996  Laurent Pautet  <pautet@quasimodo.enst.fr>

	* s-garopt.adb: For sure, serial is not the default protocol.

Fri Nov 29 12:43:07 1996  Samuel Tardieu  <sam@inf.enst.fr>

	* s-garela.adb: Replaced by an empty package.

	* s-garter.adb: On the boot server, launch the termination task
	  only if this partition is not permanent. On other partitions,
	  reject global termination if the partition is permanent.

	* s-garopt.ads: Added support for the new 'Permanent attribute.

	* s-garopt.adb: Ditto.

Thu Nov 28 22:33:30 1996  Samuel Tardieu  <sam@inf.enst.fr>

	* Makefile.am: Adapted for new elaboration packages.

	* two.py: Serial-line connector simulator (connects two sockets).

	* serial.c: Serial-line simulator using sockets. Changed procedure
	names to match the ones used in Spif.

	* s-gaseli.adb: Optimization. Changed procedure names to match the
	ones used in Spif.

	* s-garhea.adb: Added debug entries.

	* s-garela.adb: Removed useless faulty lines (do not work with
	serial protocol).

	* s-rpc.adb: Handle task non-abortion (which is quite frequent :-)
	more elegantly than before. It also corrects a strange
	segmentation fault in GNAT runtime which appeared only when
	debugging was off (that is a fast succession of events, probably a
	race condition in protected objects and entry family handling).
	