@@ -1,3 +1,8 @@
+Fri Dec 20 12:10:08 1996  Laurent Pautet  <pautet@scapin.enst.fr>
+
+	* s-stratt.adb: Raise Data_Error if an integer cannot be mapped
+	onto its equivalent XDR integer.
+
 Thu Dec 19 12:54:45 1996  Samuel Tardieu  <sam@inf.enst.fr>
 
 	* s-parint.ads: Added dummy functions for Shared_Passive (needed
